force-app/main/default/objects/Hito__c/fields/Fecha_Plan_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Plan_Inicial__c</fullName>
    <description>Fecha programada inicialmente</description>
    <label>Fecha Plan</label>
    <type>Date</type>
</CustomField>