force-app/main/default/objects/Hito__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <label>Moneda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Moneda</valueSetName>
    </valueSet>
</CustomField>