force-app/main/default/objects/Hito__c/fields/Peso_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Peso_Facturacion__c</fullName>
    <description>Porcentaje del hito en la facturación.</description>
    <label>Peso Facturación</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>