force-app/main/default/objects/Hito__c/fields/Prueba_hito__c.field-meta.xml
<CustomField>
    <fullName>Prueba_hito__c</fullName>
    <label>Prueba hito</label>
    <length>20</length>
    <type>Text</type>
</CustomField>