force-app/main/default/objects/Hito__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Proyecto__c</columns>
    <columns>NAME</columns>
    <columns>Hito_Anterior__c</columns>
    <columns>Fecha_Fin__c</columns>
    <columns>Peso_Facturacion__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>