force-app/main/default/objects/Hito__c/listViews/Gestion_de_la_Calidad_TIC.listView-meta.xml
<ListView>
    <fullName>Gestion_de_la_Calidad_TIC</fullName>
    <columns>Proyecto__c</columns>
    <columns>NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>Fecha_Fin__c</columns>
    <columns>Hito_Anterior__c</columns>
    <columns>Peso_Facturacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>Gestión de la Calidad TIC</value>
    </filters>
    <label>Gestión de la Calidad TIC</label>
    <sharedTo>
        <group>Gestion_de_la_Calidad_TIC_Consultores</group>
    </sharedTo>
</ListView>