force-app/main/default/objects/Hito__c/listViews/Hitos_MINFIN_Grupo.listView-meta.xml
<ListView>
    <fullName>Hitos_MINFIN_Grupo</fullName>
    <columns>Proyecto__c</columns>
    <columns>NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>Fecha_Fin__c</columns>
    <columns>Hito_Anterior__c</columns>
    <columns>Peso_Facturacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>MINFIN Ecuador</value>
    </filters>
    <label>MINFIN Ecuador</label>
    <sharedTo>
        <group>MINFIN_Ecuador</group>
    </sharedTo>
</ListView>