force-app/main/default/objects/Hito__c/listViews/ISU_Agua_de_Quito.listView-meta.xml
<ListView>
    <fullName>ISU_Agua_de_Quito</fullName>
    <columns>Proyecto__c</columns>
    <columns>NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>Fecha_Fin__c</columns>
    <columns>Hito_Anterior__c</columns>
    <columns>Peso_Facturacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>ISU Agua de Quito</value>
    </filters>
    <label>ISU Agua de Quito</label>
    <sharedTo></sharedTo>
</ListView>