force-app/main/default/objects/Hito__c/listViews/Mantenimiento_ERP_EPMAPS.listView-meta.xml
<ListView>
    <fullName>Mantenimiento_ERP_EPMAPS</fullName>
    <columns>Proyecto__c</columns>
    <columns>NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>Fecha_Fin__c</columns>
    <columns>Hito_Anterior__c</columns>
    <columns>Peso_Facturacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>Mantenimiento ERP EPMAPS</value>
    </filters>
    <label>Mantenimiento ERP EPMAPS</label>
    <sharedTo></sharedTo>
</ListView>