force-app/main/default/objects/Hito__c/listViews/SEDAPAL_SAP_PM.listView-meta.xml
<ListView>
    <fullName>SEDAPAL_SAP_PM</fullName>
    <columns>Proyecto__c</columns>
    <columns>NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>Fecha_Fin__c</columns>
    <columns>Hito_Anterior__c</columns>
    <columns>Peso_Facturacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>SEDAPAL SAP PM</value>
    </filters>
    <label>SEDAPAL SAP PM</label>
    <sharedTo></sharedTo>
</ListView>