force-app/main/default/objects/Hito__c/listViews/SIG_SEDESOL.listView-meta.xml
<ListView>
    <fullName>SIG_SEDESOL</fullName>
    <columns>Proyecto__c</columns>
    <columns>NAME</columns>
    <columns>Descripcion__c</columns>
    <columns>Fecha_Fin__c</columns>
    <columns>Hito_Anterior__c</columns>
    <columns>Peso_Facturacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>SIG SEDESOL</value>
    </filters>
    <label>SIG SEDESOL</label>
    <sharedTo></sharedTo>
</ListView>